intel/bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/log.txt
bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:39:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpFx;
                ^
                      = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:40:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpObjSEndTerm;
                ^
                               = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:41:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQN1;
                ^
                       = nullptr
bench_214/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main/extr_.openpilotselfdrivecontrolsliblongitudinal_mpclib_mpc_exportacado_solver.c_acado_setObjQN1QN2_with_main.c:42:17: error: default initialization of an object of const type 'real_t *const' (aka 'int *const')
  real_t *const tmpQN2;
                ^
                       = nullptr
5 errors generated.
HLS FPGA Parse FAILED.
